@@ -1,0 +1,1 @@
+declare f as non-returning function (int) returning void
