@@ -1,1 +1,4 @@
+explain noreturn void f(int)
+                      ^
+23: warning: "_Noreturn" is deprecated since C2X; did you mean [[noreturn]]?
 declare f as non-returning function (int) returning void
