@@ -1,0 +1,1 @@
+cdecl @ @ -xc17 @ declare f as _Noreturn function (int) returning void @ 0
