@@ -1,1 +1,0 @@
-cdecl @ @ @ declare f as _Noreturn function (int) returning void @ 0
