@@ -1,1 +1,0 @@
-cdecl @ @ @ declare f as noreturn function (int) returning void @ 0
