@@ -1,0 +1,1 @@
+cdecl @ @ -xc17 @ declare f as non-returning function (int) returning void @ 0
