@@ -1,1 +1,0 @@
-cdecl @ @ @ declare f as non-returning function (int) returning void @ 0
