@@ -1,0 +1,1 @@
+cdecl @ @ -xc17 @ explain noreturn void f(int) @ 0
